<resources>
    //Log In Screen
    <string name="app_name">MunRoamer</string>
    <string name="emailLoginText">E-Mail</string>
    <string name="loginPassword">Password</string>
    <string name="loginHeading">Log In</string>
    <string name="loginButtonText">Roam</string>
    <string name="noAccountText">Don\'t have an account?</string>
    <string name="signUpText">Sign up here</string>
    <string name="contentDescribeLogo">Logo for MunRoamer.  Mountains Image with MunRoamer text.  Caption \"Explore Adventure\"</string>

    //Sign Up Screen
    <string name="newFirstName">First Name</string>
    <string name="newLastName">Last Name</string>
    <string name="newEmail">Email Address</string>
    <string name="newPassword">Password</string>
    <string name="newPassword2">Confirm Password</string>
    <string name="signMeUpBtn">Sign Me Up!</string>
    <string name="cancelBtn">Cancel</string>
    <string name="findMunroBtn">Find Munros!</string>


    //API

...
    <string name="google_places_API_key">AIzaSyByC1QWVz-7QSQ_jpscMZ_aXyq_Uk_2E_c</string>
    <string name="find_munros_btn">Find Munros</string>
    <string name="searchMapButon">Search</string>
    <string name="search">Search</string>

    //BeforeRoam
    <string name="beforeRoamTitle"><b><u>Before You Roam</u></b></string>

    <string name="before_roam_text"><b>Essential equipment</b>\n
        \n
Warm and waterproof clothing, a map, compass and good navigation skills are essential, and in addition to the standard equipment for country walks, you should also carry:\n
        \n
- A survival bag - a heavy-duty bag that keeps your body insulated from the cold in an emergency.\n
...
        -Use the MunRoam map to find Munros nearby your location and search for Munros by name for example <i>Ben Nevis</i>.\n
        \n
        -Have a scroll through MunRoamers Munro List, if you see one you like, why not check it out on the map to see where it is?.\n
        \n
    - Get some handy hiking advice by clicking on the <i>Before You Roam</i> option in the menu\n
        \n
    - Add a diary entry of your ascents once you have bagged a Munro in the <i>My Bag</i> option</string>
    \n


    //Menu Strings
    <string name="hello_munroamie">Hello MunRoamie!</string>
    <string name="munroMap">MunroMap</string>
    <string name="about">About</string>
    <string name="before_you_roam">Before You Roam</string>
    <string name="my_bag">My Bag</string>
    <string name="log_out">Log Out</string>
    <string name="logged_out_confirmed">You have successfully logged out</string>
    <string name="roam_again">Roam Again</string>
    <string name="add_to_my_bag">Add To My Bag</string>
    <string name="date_of_ascent">Date of Ascent DD/MM/YYYY</string>
    <string name="name_of_munro_field">Name of Munro</string>
    <string name="diary_entry">Diary Entry</string>
    <string name="go_to_bag_btn">Go to Bag</string>
    <string name="view_bag">View Bag</string>


//Munro List

    <string name="list">
       <u><b>List of Munros by Height</b></u>\n

\n1-	Ben Nevis	1345m\n
2-	Ben Macdui	1309m\n
...
