...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_circle_cropped" />

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="274dp"
        android:background="@color/TeaGreen"
        android:ems="10"
        android:hint="@string/emailLoginText"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/loginPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="224dp"
        android:background="@color/TeaGreen"
...
        android:text="@string/loginHeading"
        android:textColor="@color/Charcoal"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:text="@string/loginButtonText"
...
