...
            android:background="@color/TeaGreen"
            android:ems="10"
            android:hint="@string/newEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/newPassword1"
            android:layout_width="293dp"
            android:layout_height="49dp"
            android:layout_marginStart="59dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="59dp"
            android:background="@color/TeaGreen"
...
            android:layout_height="69dp"
            android:text="@string/signMeUpBtn"
            android:textColor="@color/black"
            android:backgroundTint="@color/ButtonColour" />

        <Button
            android:id="@+id/signUpCancBtn"
            android:layout_width="wrap_content"
            android:layout_height="69dp"
            android:text="@string/cancelBtn"
            android:textColor="@color/white"
            android:backgroundTint="@color/Ruby" />
    </LinearLayout>
...
