package com.assignment.munroamer;


import androidx.test.espresso.DataInteraction;
import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import static androidx.test.InstrumentationRegistry.getInstrumentation;
import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.pressBack;
import static androidx.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import static androidx.test.espresso.action.ViewActions.*;
import static androidx.test.espresso.assertion.ViewAssertions.*;
import static androidx.test.espresso.matcher.ViewMatchers.*;

import com.assignment.munroamer.R;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;
import static org.hamcrest.Matchers.is;

/**
 * An Instrumented test of the UI
 * Checking features such as button changes of text and visibility, presence of ListView once Munros added to bag
 *  * @author Kirsty Carmichael
 *  * @version 0.1 (13.08.21)
 *
 */

@LargeTest
@RunWith(AndroidJUnit4.class)
public class Walk_Through_Of_App {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void walk_Through_Of_App() {
        ViewInteraction appCompatEditText = onView(
                allOf(withId(R.id.emailLogin),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                1),
                        isDisplayed()));
        appCompatEditText.perform(replaceText("kc@gmail.com"), closeSoftKeyboard());

        ViewInteraction appCompatEditText2 = onView(
                allOf(withId(R.id.loginPasswordText),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                2),
                        isDisplayed()));
        appCompatEditText2.perform(replaceText(""), closeSoftKeyboard());

        ViewInteraction appCompatEditText3 = onView(
                allOf(withId(R.id.loginPasswordText),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                2),
                        isDisplayed()));
        appCompatEditText3.perform(pressImeActionButton());

        ViewInteraction appCompatEditText4 = onView(
                allOf(withId(R.id.loginPasswordText),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                2),
                        isDisplayed()));
        appCompatEditText4.perform(click());

        ViewInteraction appCompatEditText5 = onView(
                allOf(withId(R.id.loginPasswordText),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                2),
                        isDisplayed()));
        appCompatEditText5.perform(replaceText("1234"), closeSoftKeyboard());

        ViewInteraction materialButton = onView(
                allOf(withId(R.id.loginButton), withText("Roam"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                4),
                        isDisplayed()));
        materialButton.perform(click());

        ViewInteraction materialTextView = onView(
                allOf(withId(R.id.signUpText), withText("Sign up here"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                6),
                        isDisplayed()));
        materialTextView.perform(click());

        ViewInteraction editText = onView(
                allOf(withId(R.id.newFirstName),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        0),
                                0),
                        isDisplayed()));
        editText.perform(replaceText("k"), closeSoftKeyboard());

        ViewInteraction editText2 = onView(
                allOf(withId(R.id.newLastName),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        0),
                                1),
                        isDisplayed()));
        editText2.perform(replaceText("c"), closeSoftKeyboard());

        ViewInteraction editText3 = onView(
                allOf(withId(R.id.newEmail),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        0),
                                2),
                        isDisplayed()));
        editText3.perform(replaceText("k"), closeSoftKeyboard());

        ViewInteraction editText4 = onView(
                allOf(withId(R.id.newPassword1),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        0),
                                3),
                        isDisplayed()));
        editText4.perform(replaceText("1"), closeSoftKeyboard());

        ViewInteraction editText5 = onView(
                allOf(withId(R.id.newPassword2),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        0),
                                4),
                        isDisplayed()));
        editText5.perform(replaceText("1"), closeSoftKeyboard());

        ViewInteraction button = onView(
                allOf(withId(R.id.signMeUpBtn), withText("Sign Me Up!"),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        0),
                                5),
                        isDisplayed()));
        button.perform(click());

        ViewInteraction button2 = onView(
                allOf(withId(R.id.signUpCancBtn), withText("Go to Log In"),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        0),
                                6),
                        isDisplayed()));
        button2.perform(click());

        ViewInteraction appCompatEditText6 = onView(
                allOf(withId(R.id.emailLogin),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                1),
                        isDisplayed()));
        appCompatEditText6.perform(replaceText("k"), closeSoftKeyboard());

        ViewInteraction appCompatEditText7 = onView(
                allOf(withId(R.id.loginPasswordText),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                2),
                        isDisplayed()));
        appCompatEditText7.perform(replaceText("1"), closeSoftKeyboard());

        ViewInteraction materialButton2 = onView(
                allOf(withId(R.id.loginButton), withText("Roam"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                4),
                        isDisplayed()));
        materialButton2.perform(click());
        //Espresso warned it was unlikely to be able to interact with the map so this part was deleted by KC

        ViewInteraction imageView = onView(
                allOf(withId(R.id.menu_icon),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        0),
                                0),
                        isDisplayed()));
        imageView.perform(click());

        ViewInteraction textView = onView(
                allOf(withText("MunroMap"),
                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        textView.check(matches(isDisplayed()));

        ViewInteraction textView2 = onView(
                allOf(withText("About"),
                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        textView2.check(matches(isDisplayed()));

        ViewInteraction textView3 = onView(
                allOf(withText("Before You Roam"),
                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        textView3.check(matches(isDisplayed()));

        ViewInteraction textView4 = onView(
                allOf(withText("Before You Roam"),
                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        textView4.check(matches(isDisplayed()));

        ViewInteraction textView5 = onView(
                allOf(withText("My Bag"),
                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        textView5.check(matches(withText("My Bag")));

        ViewInteraction imageView2 = onView(
                allOf(withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        imageView2.check(matches(isDisplayed()));

        ViewInteraction imageView3 = onView(
                allOf(withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        imageView3.check(matches(isDisplayed()));

        ViewInteraction textView6 = onView(
                allOf(withText("Log Out"),
                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        textView6.check(matches(withText("Log Out")));

        ViewInteraction imageView4 = onView(
                allOf(withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        imageView4.check(matches(isDisplayed()));

        ViewInteraction linearLayout2 = onView(
                allOf(childAtPosition(
                        childAtPosition(
                                withId(android.R.id.content),
                                0),
                        4),
                        isDisplayed()));
        linearLayout2.perform(click());

        ViewInteraction imageView5 = onView(
                allOf(withId(R.id.menu_icon),
                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        imageView5.check(matches(isDisplayed()));

        ViewInteraction textView7 = onView(
                allOf(withId(R.id.help_messageWindow), withText("The Munros are the mountains in Scotland over 3000 feet high.\n •A Munro is a mountain in Scotland over 3000ft(914m)\n \n •There are 282 Munros\n \n •People like to hill hike up to the top of them. When you hit the summit, you have bagged a Munro.\n \n •The beauty of wanting to bag all 282 of them is that in committing to do so, you open up the opportunity to see an incredible breadth of Scotlands outstanding and dramatic landscape.\n \n •When you’ve bagged all 282 Munros, you’re considered a Munroist. And that is when you start getting a lot of knowing nods, kudos and respect.\n \n \n How To Use MunRoamer\n \n \n - Navigate through the app using the hamburger menu with the 3 lines at the top of the screen\n \n -Use the MunRoam map to find Munros nearby your location and search for Munros by name for example Ben Nevis.\n \n -Have a scroll through MunRoamers Munro List, if you see one you like, why not check it out on the map to see where it is?.\n \n - Get some handy hiking advice by clicking on the Before You Roam option in the menu\n \n - Add a diary entry of your ascents once you have bagged a Munro in the My Bag option"),
                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        textView7.check(matches(isDisplayed()));

        ViewInteraction textView8 = onView(
                allOf(withId(R.id.toolbarTitle), withText("About"),
                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        textView8.check(matches(withText("About")));

        ViewInteraction appCompatImageView = onView(
                allOf(withId(R.id.menu_icon),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        0),
                                0),
                        isDisplayed()));
        appCompatImageView.perform(click());

        ViewInteraction linearLayout3 = onView(
                allOf(childAtPosition(
                        childAtPosition(
                                withId(android.R.id.content),
                                0),
                        5),
                        isDisplayed()));
        linearLayout3.perform(click());

        ViewInteraction textView9 = onView(
                allOf(withId(R.id.toolbarTitle), withText("Before You Roam"),
                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        textView9.check(matches(withText("Before You Roam")));

        ViewInteraction imageView6 = onView(
                allOf(withId(R.id.menu_icon),
                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        imageView6.check(matches(isDisplayed()));

        ViewInteraction textView10 = onView(
                allOf(withId(R.id.messageWindow), withText("Essential equipment\n \n Warm and waterproof clothing, a map, compass and good navigation skills are essential, and in addition to the standard equipment for country walks, you should also carry:\n \n - A survival bag - a heavy-duty bag that keeps your body insulated from the cold in an emergency.\n \n - A torch and spare batteries\n \n - A whistle (six blasts of a whistle or six flashes of a torch is the international distress signal)\n - Additional warm clothing (including hat and gloves)\n - High-energy rations (such as mint cake, chocolate, or dried fruit)\n \n - Water purification tablets\n \n - A first aid kit\n \n - An ice axe and crampons when there is snow or ice on the hills\n \n If you are likely to encounter heavy snow or ice, wear a pair of heavy-duty winter walking boots that can be fitted with crampons (metal spike attachments that give a better grip on icy terrain) and carry an ice axe. It’s worth learning how to use them before setting out on your walk as they can cause, rather than prevent, accidents if not used properly."),
                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        textView10.check(matches(isDisplayed()));

        ViewInteraction appCompatImageView2 = onView(
                allOf(withId(R.id.menu_icon),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        0),
                                0),
                        isDisplayed()));
        appCompatImageView2.perform(click());

        ViewInteraction linearLayout4 = onView(
                allOf(childAtPosition(
                        childAtPosition(
                                withId(android.R.id.content),
                                0),
                        8),
                        isDisplayed()));
        linearLayout4.perform(click());

        ViewInteraction imageView7 = onView(
                allOf(withId(R.id.menu_icon),
                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        imageView7.check(matches(isDisplayed()));

        ViewInteraction textView11 = onView(
                allOf(withId(R.id.toolbarTitle), withText("Munro List"),
                        withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
                        isDisplayed()));
        textView11.check(matches(withText("Munro List")));

        ViewInteraction textView12 = onView(
